--- a/front-end/lovebuffet-vue/index.html
+++ b/front-end/lovebuffet-vue/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>LoveBuffet</title>
   </head>
   <body>
     <div id="app"></div>
