--- a/front-end/lovebuffet-vue/index.html
+++ b/front-end/lovebuffet-vue/index.html
@@ -8,7 +8,7 @@
     <title>LoveBuffet</title>
   </head>
   <body>
-    <div id="app" style="height: 100%"></div>
+    <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
